--- a/assets/styles/abstract/_variable.scss
+++ b/assets/styles/abstract/_variable.scss
@@ -1,8 +1,8 @@
-$bgColor:#FFF5E1;
-$btnColor:#FF6347;
+$bgColor:#D0F0FF;
+$btnColor:#FADADD;
 $textColor:#3D3D3D;
-$decoColor:#FFD700;
-$decoColor2:#32CD32;
+$decoColor:#7b6146;
+$decoColor2:#0f733d;
 
-$textFont:"Poppins";
-$titleFont:"Chewy";
+$textFont:"Quicksand";
+$titleFont:"Lobster";
