--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 		<nav>
 			<ul>	
 				<li><a href={{path('app_home')}}>Accueil</a></li>
-				<li><a href={{path('add_pizza')}}>Ajouter</a></li>
+				<li><a href={{path('add_glace')}}>Ajouter</a></li>
 				{% if not is_granted('ROLE_USER') %}
 				<li><a href={{path('app_login')}}>Se connecter</a></li>
 				<li><a href={{path('app_register')}}>S'inscrire</a></li>
